--- a/src/webapp/WEB-INF/pages/users/show.html
+++ b/src/webapp/WEB-INF/pages/users/show.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>User</title>
 </head>
 <body>
 <p th:text="${user.getName() + ', ' + user.getAge()}">VALUE</p>
-<!--<p th:text="${'Email:' + user.getEmail()}">VALUE</p>-->
-<p th:text="${user.getId()}">VALUE</p>
+<p th:text="${'Email:' + user.getEmail()}">VALUE</p>
+<p th:text="'ID: ' + ${user.getId()}">VALUE</p>
 
-<a th:href="@{/users/{id}/edit(id=${user.getId()})}">Edit</a>
+<a th:href="@{/users/{id}/edit(id=${user.getId()})}">
+	<input type="submit" value="Edit">
+</a>
 
 <form th:method="delete" th:action="@{/users/{id}(id=${user.getId()})}">
     <input type="submit" value="Delete"/>
